# opengl-engin

./: CMakeLists.txt
example/: CMakeLists.txt  texture.cc  triangle.cc
include/glad/: glad.h
src/: CMakeLists.txt  main.cc
src/core/: gl_render.h  mesh.h  sharder.h
src/core/buffer/: vertex_array.h
